fixing animation issues on iOS Chrome

--- a/less/navigation.less
+++ b/less/navigation.less
@@ -2,7 +2,6 @@
   0% {
     opacity: 0;
     -webkit-transform: rotate(45deg) translate(-20px, -20px);
-    transform: rotate(45deg) translate(-20px, -20px);
   }
   50% {
     opacity: 1;
@@ -10,7 +9,6 @@
   100% {
     opacity: 0;
     -webkit-transform: rotate(45deg) translate(20px, 20px);
-    transform: rotate(45deg) translate(20px, 20px);
   }
 }
 
